maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:3: error: value unary_! is not a member of Unit
    while (!murGauche()) {
           ^Escaper:31: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^